# qmdb

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  install-dependencies  install-prereqs-ubuntu.sh  rust-toolchain.toml  shell.nix
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/dump-runner-stats/: action.yml
.github/actions/parse-gnu-time/: .gitignore  README.md  action.yml  package-lock.json  package.json  parse.js
.github/actions/parse-gnu-time/tests/: parse.test.js
.github/actions/setup-benchmark/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: benchmark.yml  benchmarks.yml  build.yml  ci.yml  tests.yml
bench/: Cargo.toml  README.md  benchmark-data.json  results2benchmark.py  run.sh
bench/src/: cli.rs  lib.rs
bench/src/speed/: db_backend.rs  def.rs  mdbx.rs  metrics.rs  mod.rs  qmdb.rs  results.rs  rocksdb.rs  shuffle_param.rs  test_gen.rs  test_helper.rs
docs/: architecture.md  design.md
hpfile/: Cargo.toml
hpfile/src/: file.rs  lib.rs
qmdb/: Cargo.toml
qmdb/examples/: v2_demo.rs  v3_indexer.rs
qmdb/examples/v1_fuzz/: main.rs  refdb.rs
qmdb/src/: compactor.rs  config.rs  def.rs  dioprefetcher.rs  flusher.rs  lib.rs  metadb.rs  uniprefetcher.rs  updater.rs
qmdb/src/entryfile/: entry.rs  entrybuffer.rs  entrycache.rs  entryfile.rs  helpers.rs  mod.rs
qmdb/src/indexer/: inmem.rs  mod.rs
qmdb/src/indexer/hybrid/: def.rs  file_reader.rs  file_writer.rs  index_cache.rs  mod.rs  overlay.rs  ref_unit.rs  tempfile.rs  unit.rs
qmdb/src/merkletree/: check.rs  helpers.rs  mod.rs  proof.rs  recover.rs  tree.rs  twig.rs  twigfile.rs
qmdb/src/seqads/: entry_flusher.rs  entry_loader.rs  entry_updater.rs  mod.rs  proof.rs  task.rs
qmdb/src/stateless/: mod.rs  node.rs  utils.rs  witness.rs  witnessupdater.rs
qmdb/src/tasks/: bptaskhub.rs  helpers.rs  mod.rs  task.rs  tasksmanager.rs
qmdb/src/test_helper/: mod.rs  randsrc.rs
qmdb/src/utils/: activebits.rs  bytescache.rs  changeset.rs  codec.rs  hasher.rs  mod.rs  ringchannel.rs  shortlist.rs  slice.rs
qmdb/tests/: test_ads.rs  test_consistency_with_seqads.rs  test_entry.rs  test_proof.rs  test_recover.rs  test_tree.rs
