[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
qmdb = { path = "../qmdb" }
reth-libmdbx = { tag = "v1.1.2", git = "https://github.com/paradigmxyz/reth.git"}
byteorder = "1.5.0"
threadpool = "1.8.1"
rayon = "1.10.0"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
rocksdb = "0.22.0"
memory-stats = "1.2.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
log = "0.4"

[dev-dependencies]
criterion = "0.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", features = ["serde1", "chrono"] }

[[bin]]
name = "speed"

[features]
default = []
use_mdbx = []
use_rocksdb = []
directio = ["qmdb/directio"]
