[package]
name = "hpfile"
edition = "2021"
publish = true
version = "0.3.0"
license = "MIT OR Apache-2.0"
description = "Head-prunable file."
readme = "README.md"
homepage = "https://github.com/qmdb/qmdb/tree/main/hpfile"
repository = "https://github.com/qmdb/qmdb/tree/main/hpfile"
documentation = "https://docs.rs/hpfile"

[dependencies]
anyhow = "1.0.86"
dashmap = "6.0.0-rc.1"
libc = "0.2.168"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }

[features]
default = []
all_in_mem = []
